--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 out/
 .idea/
 *.iml
+!**/src/main/**/out/
+!**/src/test/**/out/
 
 ### Eclipse ###
 .apt_generated
@@ -12,6 +14,8 @@ out/
 .springBeans
 .sts4-cache
 bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
 
 ### NetBeans ###
 /nbproject/private/
